added crud for employee controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
+    <div id="flash-messages">
+      <% flash.each do |type, message| %>
+        <div class="alert <%= alert_bootstrap_class(type) %> alert-dismissible fade show" role="alert">
+          <p><%= notice %> <%= alert %></p>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      <% end %>
+    </div>
     <%= yield %>
   </body>
 </html>
