added third-party API integretion with skidekiq

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <h1>Employees</h1>
   <%= link_to 'New Employee', new_employee_path, class: "btn btn-primary mb-3" %>
+  <%= link_to 'Fetch 3rd Party API Data', fetch_third_party_employees_employees_path, class: "btn btn-secondary mb-3" %>
   <table class="table table-striped">
     <thead>
       <tr>
